# SpotifyPlaylistSplitter

./: .gitignore  CMakeLists.txt  README.md
include/: Controller.h  Model.h  View.h
src/: Controller.cpp  Model.cpp  View.cpp  main.cpp
